--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="header">
         <nav>
             <div class="logo-section">
-                <img src="logo-modified.png" class="logo-img" alt="School Logo">
+                <img src="logo 2-modified.png" class="logo-img" alt="School Logo">
 
                 <h1 class="logo-text">MY DAFFODIL SCHOOL</h1>
             </div>
