--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="header">
         <nav>
             <div class="logo-section">
-                <img src="logo 2-modified.png" class="logo-img" alt="School Logo">
+                <img src="MY DAFFODIL SCHOOL LOGO.png" class="logo-img" alt="School Logo">
 
-                <h1 class="logo-text">MY DAFFODIL SCHOOL</h1>
+                
             </div>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -30,9 +30,14 @@
         <div class="hero-text">
             <h2>Welcome to Our School</h2>
             <p>Where we Grow with Knowledge</p>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn">APPLY NOW</a>
         </div>
     </section>
+<!--------COURSE-------->
+<section class="course">
+    <h1>courses we offer</h1>
+    <p>bhbsdfbhsbjhxbgbdhbxh</p>
+</section>
 
 </body>
 </html>
